Multiple changes: - Re-enable and Zed mode in capture app - Add button to delete all zed captures - Update pyzed to 5.1 - Improve Zed capture logic - Improve Zed installation process - Add reconstruction options and manifest - Make forward_unity_android_debug_port work for wireless debugging - Change docker compose postgres mapped port to 55432 (to avoid OS conflicts)
